--- a/styles/modules.css
+++ b/styles/modules.css
@@ -71,8 +71,8 @@
     
     #b {
         width: 700px;
-        height: 100px;
-        line-height: 100px;
+        height: 200px;
+        line-height: 200px;
     }
 
     #c {
@@ -113,7 +113,7 @@
     
     #i {
         width: 700px;
-        height: 100px;
-        line-height: 100px;
+        height: 200px;
+        line-height: 200px;
     }
 }
